; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_catalog.c_find_header.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_catalog.c_find_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WHITESPACE = common dso_local global i32 0, align 4
@NEWLINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*)* @find_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_header(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  br label %7

7:                                                ; preds = %29, %2
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i8* @startswith(i8* %8, i8* %9)
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %7
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* @WHITESPACE, align 4
  %16 = call i32 @strspn(i8* %14, i32 %15)
  %17 = load i8*, i8** %6, align 8
  %18 = sext i32 %16 to i64
  %19 = getelementptr inbounds i8, i8* %17, i64 %18
  store i8* %19, i8** %6, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* @NEWLINE, align 4
  %23 = call i32 @strcspn(i8* %21, i32 %22)
  %24 = call i8* @strndup(i8* %20, i32 %23)
  store i8* %24, i8** %3, align 8
  br label %30

25:                                               ; preds = %7
  %26 = call i32 @next_header(i8** %4)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %25
  store i8* null, i8** %3, align 8
  br label %30

29:                                               ; preds = %25
  br label %7

30:                                               ; preds = %28, %13
  %31 = load i8*, i8** %3, align 8
  ret i8* %31
}

declare dso_local i8* @startswith(i8*, i8*) #1

declare dso_local i32 @strspn(i8*, i32) #1

declare dso_local i8* @strndup(i8*, i32) #1

declare dso_local i32 @strcspn(i8*, i32) #1

declare dso_local i32 @next_header(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
